[gd_scene load_steps=6 format=3 uid="uid://bgupqknje05di"]

[ext_resource type="Theme" uid="uid://cwe4xop3am2ut" path="res://scenes/theme.tres" id="1_a4x2r"]
[ext_resource type="Script" uid="uid://bduq3mgutumkt" path="res://scenes/MainMenuOptions.gd" id="2_a4x2r"]
[ext_resource type="Texture2D" uid="uid://crpexus8kvfdr" path="res://mainmenu_bg.png" id="3_cjv4j"]
[ext_resource type="FontFile" uid="uid://dg6iivcilg3ml" path="res://alagard.ttf" id="4_a4x2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wd140"]
bg_color = Color(0.25098, 0.231373, 0.227451, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4
shadow_offset = Vector2(9, 15)

[node name="MainMenuOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a4x2r")
script = ExtResource("2_a4x2r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.835, 0.835)
texture = ExtResource("3_cjv4j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -391.0
offset_top = -282.0
offset_right = 391.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wd140")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -204.0
offset_right = 350.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a4x2r")
theme_override_constants/separation = 23
alignment = 1

[node name="FullscreenModeOptionButton" type="OptionButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_a4x2r")
theme_override_font_sizes/font_size = 60
theme_override_constants/arrow_margin = 85
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Volume" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_a4x2r")
theme_override_font_sizes/font_size = 60
text = "Volume"
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
value = -10.0

[node name="Resolution" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_a4x2r")
theme_override_font_sizes/font_size = 60
text = "Resolution"
horizontal_alignment = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_a4x2r")
theme_override_font_sizes/font_size = 40
theme_override_constants/arrow_margin = 85
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_a4x2r")
theme_override_font_sizes/font_size = 60
text = "Back"

[connection signal="item_selected" from="Panel/VBoxContainer/FullscreenModeOptionButton" to="." method="_on_FullscreenModeOptionButton_item_selected"]
[connection signal="value_changed" from="Panel/VBoxContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="item_selected" from="Panel/VBoxContainer/ResolutionOptionButton" to="." method="_on_ResolutionOptionButton_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
